--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,12 +4,13 @@ project:
 
 website:
   title: "2025 V4SDB Student Winter School"
-  navbar:
-    left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
-
+  sidebar:
+    style: "docked"
+    search: true  
+    contents:
+      - text: "Introduction"
+        href: index.qmd
+   
 format:
   html:
     theme: cosmo
