--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,13 +6,22 @@ website:
   title: "2025 V4SDB Student Winter School"
   sidebar:
     style: "docked"
+    logo: "images/2025V4SDBWinterSchool_logo.png"
+    title: "2025 V4SDB Student Winter School Materials" 
+    pinned: true
     search: true  
     contents:
       - text: "Introduction"
         href: index.qmd
+      - text: "Programme"
+        href: programme.qmd
+      - section: "Tutorials"
+        contents: 
+           - text: "Cell Tracking"
+             href: joanna.qmd
    
 format:
   html:
-    theme: cosmo
+    theme: minty
     css: styles.css
     toc: true
